// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package falsework.etcd;
option java_multiple_files = true;
option java_package = "com.falsework.core.generated.etcd";
option java_outer_classname = "EtcdProto";

// The request message containing the user's name.
message ServiceDefinition {
    string scheme = 1;
    string name = 2;
    string host = 3;
    int32 port = 4;
}

// The response message containing the greetings
message ServiceInformation {
    map<string, string> attributes = 1;
}
