syntax = "proto3";
import "falsework/core/common.proto";

package falsework.governance;

option java_multiple_files = true;
option java_package = "com.falsework.governance.generated";
option java_outer_classname = "EurekaProto";

enum ServingStatus {
    SERVING = 0;
    NOT_SERVING = 1;
    SERVICE_UNKNOWN = 2;
}

message ServiceInfo {
    string serviceId = 1;
    string serviceName = 2;
    string groupName = 3;
    string hostname = 4;
    string ipAddress = 5;
    int32 port = 7;
    ServingStatus status = 6;
    map<string, string> attributes = 8;
}
enum EventType {
    ADDED = 0;
    MODIFIED = 1;
    DELETED = 2;
}

message WatchRequest {

}

message WatchResponse {

}

message LookupRequest {
    falsework.common.RequestMeta meta = 1;
    string serviceName = 2;
}
message LookupResponse {
    falsework.common.ResponseMeta meta = 1;
    repeated ServiceInfo serviceInfoList = 2;
}


service LookupService {
    rpc lookup (LookupRequest) returns (LookupResponse) {
    }
}